--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,11 @@ mybatis.configuration.mapUnderscoreToCamelCase=true
 #logging.level.com.nowcoder.community=debug
 #打印到文件
 #logging.file.name=E:/java_project/community/data/community.log
+
+#邮箱MailProperties
+spring.mail.host=smtp.163.com
+spring.mail.port=465
+spring.mail.username=xuren18151310314@163.com
+spring.mail.password=USCNCAENYTHAQJTY
+spring.mail.protocol=smtps
+spring.mail.properties.mail.smtp.ssl.enable=true
