--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,13 @@
 			<version>2.0.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+			<version>2.5.6</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
