--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,3 +37,6 @@ spring.mail.username=xuren18151310314@163.com
 spring.mail.password=USCNCAENYTHAQJTY
 spring.mail.protocol=smtps
 spring.mail.properties.mail.smtp.ssl.enable=true
+
+#community”Ú√˚
+community.path.domain=http://localhost:8080
