--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,3 +40,6 @@ spring.mail.properties.mail.smtp.ssl.enable=true
 
 #community域名
 community.path.domain=http://localhost:8080
+
+#上传头像的服务器存储路径
+community.path.upload=E:/java_project/community/data/upload/header_image
