--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,11 @@
 			<version>2.0.20</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
