--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,3 +43,8 @@ community.path.domain=http://localhost:8080
 
 #上传头像的服务器存储路径
 community.path.upload=E:/java_project/community/data/upload/header_image
+
+#redis
+spring.redis.database=2
+spring.redis.host=localhost
+spring.redis.port=6379
