--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,7 +44,13 @@ community.path.domain=http://localhost:8080
 #上传头像的服务器存储路径
 community.path.upload=E:/java_project/community/data/upload/header_image
 
-#redis
+#redis，配置RedisProperties类
 spring.redis.database=2
 spring.redis.host=localhost
 spring.redis.port=6379
+
+#kafka，配置KafkaProperties类
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=community-consumer-group
+spring.kafka.consumer.enable-auto-commit=true
+spring.kafka.consumer.auto-commit-interval=3000
