--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -58,3 +58,21 @@ spring.kafka.consumer.auto-commit-interval=3000
 #elasticsearch。配置ElasticsearchProperties
 spring.data.elasticsearch.cluster-name=nowcoder
 spring.data.elasticsearch.cluster-nodes=127.0.0.1:9300
+
+#Spring普通线程池，配置TaskExecutionProperties
+spring.task.execution.pool.core-size=5
+spring.task.execution.pool.max-size=15
+spring.task.execution.pool.queue-capacity=100
+
+#Spring定时任务线程池，配置TaskSchedulingProperties
+spring.task.scheduling.pool.size=5
+
+#定时任务quartz配置（默认读取内存，配置后存储到数据库，在分布式部署时必须这样做），QuartzProperties类
+spring.quartz.job-store-type=jdbc
+spring.quartz.scheduler-name=communityScheduler
+spring.quartz.properties.org.quartz.scheduler.instanceId=AUTO
+spring.quartz.properties.org.quartz.jobStore.class=org.quartz.impl.jdbcjobstore.JobStoreTX
+spring.quartz.properties.org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.StdJDBCDelegate
+spring.quartz.properties.org.quartz.jobStore.isClustered=true
+spring.quartz.properties.org.quartz.threadPool.class=org.quartz.simpl.SimpleThreadPool
+spring.quartz.properties.org.quartz.threadPool.threadCount=5
