--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -76,3 +76,7 @@ spring.quartz.properties.org.quartz.jobStore.driverDelegateClass=org.quartz.impl
 spring.quartz.properties.org.quartz.jobStore.isClustered=true
 spring.quartz.properties.org.quartz.threadPool.class=org.quartz.simpl.SimpleThreadPool
 spring.quartz.properties.org.quartz.threadPool.threadCount=5
+
+#wk配置（截长图功能，命令和图片存储路径）
+wk.image.command=E:/develop/wkhtmltopdf/bin/wkhtmltoimage
+wk.image.store=E:/java_project/community/data/html_image
