优化网站性能（本地缓存）

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -80,3 +80,7 @@ spring.quartz.properties.org.quartz.threadPool.threadCount=5
 #wk配置（截长图功能，命令和图片存储路径）
 wk.image.command=E:/develop/wkhtmltopdf/bin/wkhtmltoimage
 wk.image.store=E:/java_project/community/data/html_image
+
+#caffeine，本地缓存（定时淘汰，不是修改淘汰，因为热门帖子点赞数、评论数经常变化）
+caffeine.posts.max-size=15
+caffeine.posts.expire-seconds=20
