--- a/pom.xml
+++ b/pom.xml
@@ -111,8 +111,13 @@
 			<artifactId>caffeine</artifactId>
 			<version>2.7.0</version>
 		</dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<plugins>
