--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -84,3 +84,7 @@ wk.image.store=E:/java_project/community/data/html_image
 #caffeine，本地缓存（定时淘汰，不是修改淘汰，因为热门帖子点赞数、评论数经常变化）
 caffeine.posts.max-size=15
 caffeine.posts.expire-seconds=20
+
+#actuator项目监控
+management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.exclude=info,caches
