--- a/pom.xml
+++ b/pom.xml
@@ -117,7 +117,12 @@
             <scope>test</scope>
         </dependency>
 
-    </dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
+	</dependencies>
 
 	<build>
 		<plugins>
